# opencl_2

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  device.cl  generator.c  main.c  opencl_lab2.h  select.c
